css/nexo.css
/* ... */
@media (max-width: 767px) {
  header .container {
    flex-direction: column;
    align-items: center;
    --header-height: 90px;
  }
}

header .logo {
  color: var(--main-color);
  text-transform: uppercase;
  text-decoration: none;
  font-size: 26px;
  font-weight: bold;
  align-self: center;
}

@media (max-width: 767px) {
  header .logo {
    height: 50px;
    display: flex;
    align-items: center;
  }
}

header ul {
  display: flex;
}

/* the responsive part can be implemented in a different way

  you can make the flex-wrap: wrap in the container
  then you make the height of logo 100%
  then you center the nav usin margin: auto

  .container {
    flex-wrap: wrap;
  }
  instead of the media query of .container to change the flex-direction

  @media (max-width: 767px) {
    .logo {
      width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
    }
    header ul {
      margin: auto;
    }
    more styles
  }

*/

header ul>li>a {
  /* this selector to ensure that these stylings won't be applied to unwanted children later */
  color: initial;
  text-decoration: none;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 30px;
  /* the vertical padding is useless as the items are already centered vertically */
  /* vertical padding can cause problems in the future in the header height */
  font-size: 18px;
  position: relative;
  /* to make the upper border with ::before */
  transition: var(--main-transition-duration);
}

header ul>li:last-child>a {
  cursor: pointer;
}

@media (max-width: 767px) {
  header ul>li>a {
    padding: 10px;
    font-size: 14px;
    height: calc(var(--header-height) - 50px);
  }
}

header ul li:hover>a {
  color: var(--main-color);
  background-color: #fafafa;
}

header ul>li>a::before {
  content: '';
  position: absolute;
  height: 4px;
  width: 100%;
  top: 0;
  left: 0;
  background-color: var(--main-color);
  transform-origin: left;
  transform: scaleX(0);
  transition: var(--main-transition-duration);
}

header ul li:hover>a::before {
  transform: scaleX(1);
}

/* another way to implement the ::before part

header ul>li>a {
  ...
  overflow: hidden;
}

header ul>li>a::before {
  ...
  left: -100%;
  transition: ...;
}

header ul>li>a:hover::before {
  left: 0;
}

// instead  of scaling the ::before, we move it
// and added the overflow hidden to hide the outside ::before

*/

header ul li .menu {
  display: flex;
  align-items: flex-start;
  gap: 40px;
  padding: 30px;
  position: absolute;
  right: 0;
  left: 0;
  top: calc(100% + 50px);
  background-color: white;
  border-bottom: 3px var(--main-color) solid;
  z-index: -1;
  opacity: 0;
  transition: top var(--main-transition-duration), opacity var(--main-transition-duration);
}

header ul li:hover .menu {
  opacity: 1;
  top: calc(100% + 1px);
  z-index: 100;
}

@media (max-width: 767px) {
  header ul li:hover .menu {
    display: block;
    padding: 5px;
  }
}

@media (max-width: 991px) {
  header ul li .menu .image {
    display: none;
  }
}

header ul li .menu img {
  max-width: 100%;
}

header ul li .menu .links {
  flex: 1 0 250px;
}

header ul li .menu .links a {
  display: block;
  color: var(--main-color);
  text-decoration: none;
  text-transform: capitalize;
  font-weight: bold;
  font-size: 18px;
  padding: 15px;
  position: relative;
  border-bottom: 1px solid #e9e6e6;
}

header ul li .menu .links:last-child a:last-child {
  border-bottom: none;
}

@media (min-width: 768px) {
  header ul li .menu .links a:last-child {
    border-bottom: none;
  }
}

header ul li .menu .links a::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  background-color: #fafafa;
  transition: var(--main-transition-duration);
  z-index: -1;
}

header ul li .menu .links a:hover::before {
  width: 100%;
}

header ul li .menu .links a i {
  margin-right: 10px;
}

/* end header */

/* start landing */
.landing {
  position: relative;
  overflow: hidden;
}

.landing::before {
  content: '';
  position: absolute;
  left: 0;
  top: -40px;
  width: 100%;
  height: 100%;
  background-color: #ececec;
  z-index: -1;
  transform-origin: top left;
  transform: skewY(-6deg);
}

@media (max-width: 767px) {
  .landing::before {
    top: -60px;
  }
}

.landing .container {
  height: calc(100vh - var(--header-height));
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 120px;
}

.landing .text {
  max-width: 500px;
}

@media (max-width: 991px) {
  .landing .text {
    text-align: center;
    margin: 0 auto;
  }
}

.landing .text h2 {
  font-size: 40px;
  letter-spacing: -2px;
  margin: 0px;
}

@media (max-width: 767px) {
  .landing .text h2 {
    font-size: 28px;
  }
}

.landing .text p {
  font-size: 23px;
  line-height: 1.7;
  color: rgb(102, 102, 102);
  margin: 5px 0px 0px;
}

@media (max-width: 767px) {
  .landing .text p {
    font-size: 18px;
  }
}

.landing img {
  width: 600px;
  animation: up-and-down 4s infinite alternate linear;
}

@media (max-width: 991px) {
  .landing img {
    display: none;
  }
}

.landing .go-down {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: 30px;
  color: var(--main-color);
  text-decoration: none;
  font-size: 25px;
  transition: var(--main-transition-duration);
}

.landing .go-down:hover {
  color: var(--main-color-alt);
}

.landing .go-down i {
  animation: bouncing 1.5s infinite;
}

/* end landing */

/* start articles */
.articles .container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 40px;
}

.articles .card {
  border-radius: 5px;
  overflow: hidden;
  box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
  transition: var(--main-transition-duration);
}

.articles .card:hover {
  box-shadow: 0px 2px 15px rgb(0 0 0 / 20%);
  transform: translateY(-10px);
}

.articles .card img {
  max-width: 100%;
}

.articles .card .body {
  padding: 20px;
}
/* ... */

